--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://u2:12345678@db-pg-do-user-998710-0.b.db.ondigitalocean.com:25060/u2db?schema=public&sslmode=require"
+
+JWT_SECRET_KEY=dSgVkYp3s6v9y$B&E)H@McQeThWmZq4t
